package org.un.sdgs.terratales;

public interface IDatabase {
    void load();
}
