@startuml

title __TERRATALES's Class Diagram__\n

  namespace  {
    namespace rg.un.sdgs.terratales {
      class org.un.sdgs.terratales.FavoritesController {
      }
    }
  }
  

  namespace  {
    namespace rg.un.sdgs.terratales {
      interface org.un.sdgs.terratales.IDatabase {
      }
    }
  }
  

  namespace  {
    namespace rg.un.sdgs.terratales {
      class org.un.sdgs.terratales.LandDatabase {
      }
    }
  }
  

  namespace  {
    namespace rg.un.sdgs.terratales {
      class org.un.sdgs.terratales.Location {
      }
    }
  }
  

  namespace  {
    namespace rg.un.sdgs.terratales {
      class org.un.sdgs.terratales.LocationController {
      }
    }
  }
  

  namespace  {
    namespace rg.un.sdgs.terratales {
      class org.un.sdgs.terratales.LoginController {
      }
    }
  }
  

  namespace  {
    namespace rg.un.sdgs.terratales {
      class org.un.sdgs.terratales.Main {
      }
    }
  }
  

  namespace  {
    namespace rg.un.sdgs.terratales {
      class org.un.sdgs.terratales.MapController {
      }
    }
  }
  

  namespace  {
    namespace rg.un.sdgs.terratales {
      class org.un.sdgs.terratales.SignupController {
      }
    }
  }
  

  namespace  {
    namespace rg.un.sdgs.terratales {
      class org.un.sdgs.terratales.User {
      }
    }
  }
  

  namespace  {
    namespace rg.un.sdgs.terratales {
      class org.un.sdgs.terratales.UserDatabase {
      }
    }
  }
  

  org.un.sdgs.terratales.LandDatabase .up.|> org.un.sdgs.terratales.IDatabase
  org.un.sdgs.terratales.Main -up-|> javafx.application.Application
  org.un.sdgs.terratales.UserDatabase .up.|> org.un.sdgs.terratales.IDatabase
  org.un.sdgs.terratales.UserDatabase o-- org.un.sdgs.terratales.User : currentUser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
